[package]
name = "seastar"
version = "0.1.0"
edition = "2021"
links = "seastar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
seastar-macros = { path = "../seastar-macros" }
futures = "0.3"

[dev-dependencies]
num_cpus = "1.15.0"

[build-dependencies]
cxx-build = { version = "1", features = ["parallel"] }
pkg-config = "0.3"
